<resources>
    <string name="app_name">Mileage Tracker</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_car_list">Car List</string>
    <string name="title_activity_select_station">Select Station</string>
    <string name="title_activity_car_detail">Car Detail</string>
    <string name="title_activity_station_list">Station List</string>

    <string name="select_station_nearby_rv">Nearby Stations</string>
    <string name="select_station_used_rv">Visted Stations</string>

    <string name="car_detail_current_mpg_label">Current MPG</string>
    <string name="car_detail_avg_mpg_label">Average MPG:</string>
    <string name="car_detail_last_fillup_label">Last Fillup Date</string>
    <string name="car_detail_curr_mileage_label">Current Mileage</string>

    <string name="add_car_name_hint">Car Name</string>
    <string name="add_car_make_hint">Car Make</string>
    <string name="add_car_model_hint">Car Model</string>
    <string name="add_car_year_hint">Car Year</string>
    <string name="add_car_add_button">Add Car</string>
    <string name="add_car_edit_button">Edit Car</string>
    <string name="add_car_mileage_hint">Current Mileage</string>

    <string name="add_fillup_fuel_amount_hint">Gallons of Fuel</string>
    <string name="add_fillup_price_hint">Price per Gallon</string>
    <string name="add_fillup_octane_hint">Octane Rating</string>
    <string name="add_fillup_add_button">Submit</string>
    <string name="add_fillup_edit_button">Submit</string>

    <string name="edit_text_error">Please Enter</string>
    <string name="car_detail_add_fillup_button">Add Fill-up</string>

    <string name="google_app_id" translatable="false">mileagetracker-1271</string>
    <string name="fillup_item_station_name_label">Station Name:</string>
    <string name="fillup_item_gallons_label">Gallons:</string>
    <string name="fillup_item_price_label">Price: $</string>
    <string name="fillup_item_octane_label">Octane:</string>
    <string name="fillup_item_mpg_label">MPG</string>
    <string name="fillup_item_total_cost_label">Total: $</string>

    <string name="item_car_mpg_label">Current MPG:</string>
    <string name="gps_alert_message">GPS is disabled.  Please enable to view nearby Gas Stations</string>
    <string name="gps_alert_settings">Settings</string>
    <string name="gps_alert_cancel">Cancel</string>
    <string name="car_detail_delete_car_button">Delete</string>
    <string name="car_detail_edit_car_button">Edit</string>
    <string name="car_detail_delete_car_dialog">Deleting this car will remove all associated fillups\nAre you sure you wish to proceed?</string>
    <string name="car_detail_delete_dialog_delete">Delete</string>
    <string name="car_detail_delete_dialog_cancel">Cancel</string>
    <string name="select_station_address_input_hint">Station Address</string>
    <string name="select_station_address_find_text">Search</string>
    <string name="title_activity_add_car">Add Car</string>
    <string name="add_fillup_no_station_text">No station selected</string>
    <string name="add_fillup_no_station_click_here">click here to add</string>
    <string name="title_activity_add_fillup">Add Fillup</string>
    <string name="select_station_search_station_text">Station Search Results</string>
    <string name="tool_tip_layout_mpg">mpg</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="item_car_image_content_desc">Your Car</string>
    <string name="add_car_image_content_desc">Add an image of your car</string>
    <string name="add_fillup_add_station_icon_content_desc">Add Station Icon</string>
    <string name="add_fillup_change_date_icon_content_desc">Change Date Icon</string>
    <string name="item_fillup_edit_content_desc">Edit Fillup</string>
    <string name="tool_tip_mpg_icon_content_desc">Mile Per Gallon Tool Tip Icon</string>
    <string name="activity_car_detail_chart_content_desc">Miles Per Gallon Over Time</string>
    <string name="add_car_bad_year_error">Incorrect Year</string>

    <string name="remove_car">Delete Your Car</string>
    <string name="edit_car">Edit Your Car Information</string>
    <string name="add_fillup">Add Your Gas Fillup Measurements</string>
    <string name="station_search">Search For Your Station Using the Address</string>
    <string name="add_car">Add Your Car Information</string>


</resources>
