<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.automotive.hhi.mileagetracker.view.AddCarActivity">
    <LinearLayout
        android:id="@+id/add_car_input_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/add_car_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_insert_photo_black_48dp"
            android:contentDescription="@string/add_car_image_content_desc"
            android:nextFocusDown="@+id/add_car_name"/>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                android:id="@+id/add_car_name"
                android:hint="@string/add_car_name_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:nextFocusUp="@id/add_car_image"
                android:nextFocusDown="@+id/add_car_make"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                android:id="@+id/add_car_make"
                android:hint="@string/add_car_make_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:nextFocusUp="@id/add_car_name"
                android:nextFocusDown="@+id/add_car_model"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                android:id="@+id/add_car_model"
                android:hint="@string/add_car_model_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:nextFocusUp="@id/add_car_make"
                android:nextFocusDown="@+id/add_car_year"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                android:id="@+id/add_car_year"
                android:hint="@string/add_car_year_hint"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/add_car_year_length"
                android:imeOptions="actionDone"
                android:nextFocusUp="@id/add_car_model"
                android:nextFocusDown="@+id/add_car_submit"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/add_car_submit"
            android:text="@string/add_car_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nextFocusUp="@id/add_car_year"/>
    </LinearLayout>
</FrameLayout>
