<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_select_station"
    tools:context="com.automotive.hhi.mileagetracker.view.SelectStationActivity"
    android:background="@color/colorPrimaryDark">
    <android.support.v7.widget.CardView
        style="@style/AppTheme.CardView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                android:id="@+id/select_station_address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_station_address_input_hint"
                android:nextFocusDown="@+id/select_station_address_find_button"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/select_station_address_find_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_station_address_find_text"
            android:nextFocusUp="@id/select_station_address_input"
            android:nextFocusDown="@+id/select_station_nearby_rv"/>
    </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        style="@style/AppTheme.CardView"
        android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/select_station_nearby_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/select_station_nearby_rv"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/select_station_nearby_rv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorAccent"
            android:nextFocusUp="@id/select_station_address_find_button"
            android:nextFocusDown="@+id/select_station_used_rv"/>
    </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        style="@style/AppTheme.CardView"
        android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/select_station_used_rv"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/select_station_used_rv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:nextFocusUp="@id/select_station_nearby_rv"/>
    </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
