<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.automotive.hhi.mileagetracker.view.AddFillupActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryDark">
        <LinearLayout
            android:id="@+id/add_fillup_date_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:nextFocusDown="@+id/add_fillup_station_container">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_today_black_48dp"
                android:contentDescription="@string/add_fillup_change_date_icon_content_desc"/>
            <TextView
                android:id="@+id/add_fillup_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40dp"
                android:gravity="center"
                />
        </LinearLayout>
        <View style="@style/AppTheme.Divider"/>
        <LinearLayout
            android:id="@+id/add_fillup_station_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:nextFocusUp="@id/add_fillup_date_container"
            android:nextFocusDown="@+id/add_fillup_fuel_amount">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_local_gas_station_black_48dp"
                android:contentDescription="@string/add_fillup_add_station_icon_content_desc"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:id="@+id/add_fillup_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/add_fillup_station_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
            </LinearLayout>
        </LinearLayout>
        <View style="@style/AppTheme.Divider"/>
        <LinearLayout
            android:id="@+id/add_fillup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <EditText
                    android:id="@+id/add_fillup_fuel_amount"
                    android:hint="@string/add_fillup_fuel_amount_hint"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusUp="@id/add_fillup_station_container"
                    android:nextFocusDown="@+id/add_fillup_price"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <EditText
                    android:id="@+id/add_fillup_price"
                    android:hint="@string/add_fillup_price_hint"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusUp="@id/add_fillup_fuel_amount"
                    android:nextFocusDown="@+id/add_fillup_octane"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <EditText
                    android:id="@+id/add_fillup_octane"
                    android:hint="@string/add_fillup_octane_hint"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:nextFocusUp="@id/add_fillup_price"
                    android:nextFocusDown="@+id/add_fillup_current_mileage"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <EditText
                    android:id="@+id/add_fillup_current_mileage"
                    android:hint="Current Mileage"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:nextFocusUp="@id/add_fillup_octane"
                    android:nextFocusDown="@+id/add_fillup_submit"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/add_fillup_submit"
                android:text="@string/add_fillup_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusUp="@id/add_fillup_current_mileage"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
